--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="main.css">
-    <style>
-      .container {
-        display:grid;
-      }
-    </style>
     <meta charset="utf-8">
     <title></title>
   </head>
